# appsimple

./: .gcloudignore  .gitignore  README.md  app.yaml  bodhimind.html  ftp.txt  guidedmind.html  index.html  livewire.html  main.py  mindtimer.html  package-lock.json  privacy.html  pyproject.toml  requirements.txt  terms.html
assets/css/: animations.css  chat-ui.css  main.css
assets/js/: main.js
css/: appPage.css
mobile/: bodhimind.html  guidedmind.html  livewire.html  mindtimer.html  terms.html
mobile/css/: mobile.css
new/: index.html  index2.html
new/pages/: about.html  contact.html  process.html  services.html
old/: guidedmind.html  index.html  livewire.html
old/css/: appPage_mobile.css  stylesheet.css
pages/: about.html  contact.html  portfolio.html  process.html  services.html
src/appsimple_website/: main.py  runner.py
src/appsimple_website.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: 404.html  about.html  base.html  bodhimind.html  contact.html  doc.html  dspy-prompt-optimization.html  explore.html  guidedmind.html  index.html  livewire.html  llm-evaluation-prompting.html  portfolio.html  privacy.html  process.html  replay.html  services.html  terms.html
templates/components/: navigation.html
templates/mobile/: privacy.html  terms.html
templates/portfolio/: asimpleauthkit-case-study.html  asimpleauthkit.html  dspy-prompt-optimization.html  fot-recommender.html  guidedmind.html  livewire.html  llm-evaluation-prompting.html  llm-harness.html  llm-server.html
tests/: test_main.py
(+73 files in other folders)
